apps/cnc-base/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cnc
  annotations:
    cnc-frank.io/host-is-overridden-by-overlay: "true"
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`cnc.invalid.cluster.derio.net`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik-system
        - name: security-headers
          namespace: traefik-system
      services:
        - name: cnc-fru
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.cluster.derio.net"
